update for sales pipeline
